@@ -5,6 +5,9 @@
 	  Support for sp in notUsed for gbz80, patch by Basil Hussain.
 	* src/z80/gen.c:
 	  Use tlcs90 (sp) adressing mode.
+	* src/z80/peep.c,
+	  src/z80/main.c:
+	  notUsed() for gbz80 with flag support, from patch by Baŝto.
 
 2020-06-24 Philipp Klaus Krause <pkk AT spth.de>
 
